--- a/styles/base.css
+++ b/styles/base.css
@@ -6,7 +6,7 @@ body {
 }
 
 main {
-    max-width: 60%;
+    max-width: 75%;
     margin: 0 auto;
     grid-template-columns: 1fr;
 }
@@ -23,6 +23,7 @@ header {
 
 header img {
     margin-right: 4%;
+    padding: 2.5%;
 }
 
 nav a {
@@ -32,19 +33,20 @@ nav a {
     padding: 0.8%;
     font-size: 120%;
     color: white;
+    text-decoration: none;
 }
 
 h2 {
     text-align: center;
     border-bottom: 1px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
 }
 
 h3 {
     text-align: center;
     background-color: #FD9CA1;
-    padding: 2%;
+    padding: 0.75rem;
     margin-top: 0;
 }
 
@@ -73,4 +75,5 @@ footer {
     background-color: #69A197;
     padding: 0.5%;
     font-size: 110%;
+    margin-top: 3%;
 }
