--- a/lesson02/styles/design-principles-large.css
+++ b/lesson02/styles/design-principles-large.css
@@ -6,7 +6,7 @@
     }
 
     .card {
-        margin: 1.5rem, 1.5rem, 0rem, 1.5rem;
+        margin: 1.5rem 1.5rem 0rem 1.5rem;
         margin-top: 2.5rem;
         margin-left: 1rem;
         margin-right: 1.5rem;
