--- a/styles/larger.css
+++ b/styles/larger.css
@@ -3,7 +3,7 @@
     main {
         display: grid;
         grid-template-columns: 2fr 1fr;
-        max-width: 60%;
+        max-width: 65%;
         flex-wrap: wrap;
     }
 
@@ -18,6 +18,10 @@
         margin-right: 3%;
     }
 
+    #menu {
+        display: none;
+    }
+
     nav {
         display: flex;
         justify-content: space-between;
@@ -25,6 +29,11 @@
         padding: 1.5%;
         padding-left: 8%;
         padding-right: 8%;
+        flex-direction: row;
+    }
+
+    nav a {
+        display: block;
     }
 
     h2 {
@@ -43,4 +52,21 @@
         margin: 4%;
     }
 
+    .card {
+        margin-bottom: 0%;
+    }
+
+    iframe {
+        width: 70%;
+        margin-right: 15%;
+        margin-left: 15%;
+        margin-top: 2.5rem;
+        margin-bottom: 3rem;
+    }
+
+    footer {
+        background-color: #69A197;
+        padding: 0.5%;
+        font-size: 110%;
+    }
 }
