--- a/styles/base.css
+++ b/styles/base.css
@@ -103,8 +103,7 @@ iframe {
     width: 80%;
     margin-right: 10%;
     margin-left: 10%;
-    margin-top: 0.75rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 4%;
 }
 
 footer {
