--- a/lesson03/styles/chamber-site-plan.css
+++ b/lesson03/styles/chamber-site-plan.css
@@ -1,22 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Karla&display=swap');
 
 :root {
-    --primary-color: #1C3738;
-    --secondary-color: #006C67;
+    --primary-color: #4f9b9e;
+    --secondary-color: #274d4f;
 }
 
 body {
     font-family: 'Karla', sans-serif;
     margin: 0 auto;
-    max-width: 960px;
-    padding: 4em;
+    max-width: 1000px;
+    padding: 5rem;
+    color: var(--secondary-color);
 }
 
-header {
+.container {
+    background: #cfcfcf;
+    padding-bottom: 3rem;
+}
+
+h1,
+h2,
+#font1 {
+    font-family: "Kanit", sans-serif;
+}
+
+body header {
     background-color: var(--primary-color);
-    color: white;
     text-align: center;
     padding: 0.5rem;
+    color: black;
 }
 
 h2 {
@@ -26,6 +38,9 @@ h2 {
 p {
     text-align: center;
     padding-bottom: 0.5rem;
+    font-size: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .colors {
@@ -34,21 +49,64 @@ p {
 }
 
 .colors th {
-    background-color: #b7b7b7;
+    background-color: #7e7e7e;
     padding: 0.5rem;
+    font-size: 20px;
+    color: white;
 }
 
 .colors td {
     width: 25%;
     height: 3em;
-}
-
-#primary {
-    background-color: var(--primary-color);
-    color: white;
+    border: 3px solid black;
 }
 
 #secondary {
     background-color: var(--secondary-color);
     color: white;
+    font-size: 20px;
+}
+
+#primary {
+    background-color: var(--primary-color);
+    font-size: 20px;
+    color: black;
+}
+
+#background {
+    background-color: #cfcfcf;
+    color: var(--secondary-color);
+    font-size: 20px;
+}
+
+img {
+    display: block;
+}
+
+h3 {
+    text-align: center;
+    font-size: 20px;
+}
+
+.small {
+    width: 20rem;
+    margin: 0 auto;
+    border-left: 2px solid rgb(216, 215, 215);
+    padding: 0.5rem;
+}
+
+.large {
+    margin: 0 auto;
+}
+
+.primary-list,
+.secondary-list,
+.background-list {
+    flex: 1;
+    font-size: 18px;
+}
+
+.color-lists {
+    display: flex;
+    justify-content: space-around;
 }
