--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -148,12 +148,28 @@ section p {
 
 footer {
     background-color: #4f9b9e;
-    padding: 1rem;
+    padding-top: 1rem;
     text-align: center;
     font-family: 'Karla', sans-serif;
     font-size: 1.3rem;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
 
-footer p {
+.footer-info {
     margin: 0.5rem 0;
+    grid-column: 1/3;
+    border-top: 1px solid black;
+}
+
+footer img {
+    width: 6rem;
+    display: flex;
+    grid-column: 1/2;
+    margin-left: 3rem;
+    margin-top: 2.5rem;
+}
+
+.site-name {
+    font-weight: bold;
 }
