--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,1 +1,98 @@
-@media screen and (min-width: 750px) {}
+@media screen and (min-width: 750px) and (max-width: 1023px) {
+    header {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: auto auto;
+        position: relative;
+        align-items: center;
+    }
+
+    .small-header {
+        width: 100%;
+    }
+
+    .title-break {
+        display: none;
+    }
+
+    header img {
+        width: 6rem;
+        grid-column: 1/2;
+        justify-self: center;
+        z-index: 1;
+        margin: auto;
+    }
+
+    header h1 {
+        width: 100%;
+        font-size: 2rem;
+        grid-column: 2/7;
+        z-index: 1;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row;
+        grid-row: 2;
+        grid-column: 1/7;
+        z-index: 1;
+        position: relative;
+    }
+
+    nav a {
+        display: block;
+    }
+
+    .hero-section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+    }
+
+    #hero {
+        width: 100%;
+        height: auto;
+        position: relative;
+        z-index: 0;
+    }
+
+    #action {
+        font-size: 1.3rem;
+        padding: 1.2rem;
+    }
+
+    #menu {
+        display: none;
+    }
+
+    .section1,
+    .section2,
+    .section3 {
+        width: 80%;
+        margin: 1rem;
+    }
+
+    .section2 p {
+        height: auto;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    footer img {
+        width: 6rem;
+        margin: 0 auto;
+    }
+
+    .footer-info {
+        border-top: 1px solid black;
+        margin-top: 1rem;
+        width: 100%;
+    }
+}
