--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -48,7 +48,6 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        overflow: hidden;
     }
 
     #hero {
@@ -63,36 +62,18 @@
         padding: 1.2rem;
     }
 
-    #menu {
-        display: none;
-    }
-
     .section1,
     .section2,
     .section3 {
         width: 80%;
-        margin: 1rem;
+        margin: 1rem auto 2rem auto;
     }
 
-    .section2 p {
-        height: auto;
+    .section1 {
+        margin-top: 2.5rem;
     }
 
-    footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    footer img {
-        width: 6rem;
-        margin: 0 auto;
-    }
-
-    .footer-info {
-        border-top: 1px solid black;
-        margin-top: 1rem;
-        width: 100%;
+    #menu {
+        display: none;
     }
 }
