--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -77,6 +77,7 @@ nav a:hover {
 
 main {
     font-family: 'Karla', sans-serif;
+    color: #274d4f
 }
 
 .hero-section {
@@ -158,13 +159,12 @@ footer {
 }
 
 .footer-info {
-    margin: 0.5rem 0;
     grid-column: 1/3;
     border-top: 1px solid black;
 }
 
 footer img {
-    width: 6rem;
+    width: 7rem;
     display: flex;
     grid-column: 1/2;
     margin-top: 2.25rem;
