--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -97,10 +97,15 @@ main {
     transform: translate(-50%, -50%);
     padding: 1rem;
     font-size: 1.2rem;
-    background-color: #cfcfcf99;
+    background-color: #cfcfcfa3;
     border: 3px solid #000;
     border-radius: 10px;
     font-weight: bold;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+}
+
+.events img {
+    display: none;
 }
 
 .section1,
@@ -172,7 +177,7 @@ footer img {
 }
 
 .contact-info {
-    grid-columN: 2/3;
+    grid-column: 2/3;
     margin: auto;
 }
 
