--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -2,28 +2,36 @@
     header {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        padding: 1rem;
+        justify-content: center;
+        padding: 1rem 0 1rem 0;
         border: 2px solid black;
-
+        width: 100%;
     }
 
     header img {
-        width: 8rem;
+        width: 8.5rem;
     }
 
     header h1 {
-        font-size: 1.75rem;
+        font-size: 2.75rem;
         position: static;
         transform: none;
-        margin-left: 4%;
+        width: 100%;
+    }
+
+    .small-header h1 {
+        width: 60%;
+        margin-left: 4rem;
+        justify-content: left;
     }
 
     nav {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        font-size: 200%;
+        font-size: 2.5rem;
+        width: 70%;
+        margin-left: 1%;
     }
 
     nav a {
@@ -39,8 +47,11 @@
     }
 
     #action {
-        font-size: 1.5rem;
+        font-size: 2rem;
         padding: 1.5rem;
+        top: 0;
+        left: 0;
+        transform: translate(50%, 150%);
     }
 
     main {
@@ -53,18 +64,132 @@
         display: none;
     }
 
+    #hero {
+        margin-bottom: 2rem;
+    }
+
     .section1,
     .section2,
     .section3 {
-        width: 30%;
+        width: 80%;
         margin: 2rem;
+        font-size: 2rem;
+        margin: auto;
+    }
+
+    .site-content {
+        display: grid;
+        grid-template-columns: 1fr 1.5fr;
+        margin-bottom: 2rem;
+    }
+
+    .section1 {
+        grid-column: 1/2;
+        margin-top: 2rem;
+        grid-row: 1/3;
+        margin-right: 0;
+    }
+
+    .section1 p {
+        border-bottom: none;
+        margin: 1rem;
+    }
+
+    .events {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+        justify-items: center;
+    }
+
+    .events img {
+        display: grid;
+        width: 8rem
+    }
+
+    p.event1 {
+        grid-column: 1/3;
+        grid-row: 1;
+    }
+
+    img.event1 {
+        grid-column: 3/4;
+        grid-row: 1;
+    }
+
+    p.event2 {
+        grid-column: 2/4;
+        grid-row: 2;
+    }
+
+    img.event2 {
+        grid-column: 1/2;
+        grid-row: 2;
+    }
+
+    p.event3 {
+        grid-column: 1/3;
+        grid-row: 3;
+    }
+
+    img.event1 {
+        grid-column: 3/4;
+        grid-row: 3;
+    }
+
+    .section2 {
+        margin-top: 2rem;
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    .section3 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        width: 75%;
+    }
+
+    section h2 {
+        font-size: 2.5rem;
+    }
+
+    section p {
+        padding: 1rem;
     }
 
     .section2 p {
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 8rem;
+    }
+
+    .section-link {
+        display: none;
+    }
+
+    .businesses {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 2rem;
+    }
+
+    .business1 {
+        grid-column: 1/2;
+        margin: auto;
+        width: 80%;
+    }
+
+    .business2 {
+        grid-column: 2/3;
+        margin: auto;
+        width: 80%;
+    }
+
+    .business3 {
+        grid-column: 1/3;
+        width: 40%;
+        margin: auto;
+        margin-top: 2rem;
     }
 
     footer {
