--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -176,33 +176,40 @@
     .business1 {
         grid-column: 1/2;
         margin: auto;
-        width: 80%;
+        width: 75%;
+        padding: 5rem;
     }
 
     .business2 {
         grid-column: 2/3;
         margin: auto;
-        width: 80%;
+        width: 75%;
     }
 
     .business3 {
         grid-column: 1/3;
-        width: 40%;
+        width: 37.5%;
         margin: auto;
         margin-top: 2rem;
     }
 
     footer {
-        grid-template-columns: 1fr 2fr 1fr;
-        padding: 1rem 2rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        margin-top: 2rem;
+        padding: 1rem;
         text-align: left;
     }
 
     footer img {
-        width: 8rem;
+        width: 10rem;
+        align-self: center;
+        grid-column: 1/2;
     }
 
     .footer-info {
-        text-align: center;
+        align-items: center;
+        border: none;
+        grid-column: 3/4;
     }
 }
