--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -194,22 +194,43 @@
     }
 
     footer {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
+        display: grid;
+        grid-template-columns: 1fr 6fr;
         margin-top: 2rem;
-        padding: 1rem;
-        text-align: left;
     }
 
-    footer img {
-        width: 10rem;
-        align-self: center;
-        grid-column: 1/2;
+    .footer-break {
+        display: inline;
+        margin: 0 0.5rem;
     }
 
     .footer-info {
+        display: flex;
         align-items: center;
-        border: none;
-        grid-column: 3/4;
+        margin: auto;
+        grid-column: 2/3;
+        width: 95%;
+        font-size: 1.75rem;
+        justify-content: center;
+
+    }
+
+    .contact-info {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        grid-column: 2/3;
+        justify-content: center;
+        width: 95%;
+        font-size: 1.75rem;
+    }
+
+    footer img {
+        display: flex;
+        width: 12rem;
+        margin: auto;
+        grid-column: 1/2;
+        grid-row: 1/3;
+        margin-left: 15%;
     }
 }
