--- a/styles/larger.css
+++ b/styles/larger.css
@@ -58,6 +58,7 @@
 
     iframe {
         width: 70%;
+        height: 450px;
         margin-right: 15%;
         margin-left: 15%;
         margin-top: 2rem;
