--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -35,7 +35,7 @@ header h1 {
     position: absolute;
     top: 1.5rem;
     right: 1.5rem;
-    font-size: 2.25rem;
+    font-size: 2rem;
     color: #234547;
 }
 
@@ -69,6 +69,66 @@ nav a {
     text-align: center;
     text-decoration: none;
     width: 100%;
+}
+
+.switch {
+    position: absolute;
+    top: 4.25rem;
+    right: 1.65rem;
+    width: 34px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #cfcfcf;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 14px;
+    width: 14px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #234547;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #234547;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(14px);
+    -ms-transform: translateX(14px);
+    transform: translateX(14px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
 
 nav a:hover {
@@ -158,7 +218,7 @@ footer {
     padding-top: 1rem;
     text-align: center;
     font-family: 'Karla', sans-serif;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     display: grid;
     grid-template-columns: 1.25fr 2fr;
     grid-gap: 1rem;
@@ -169,8 +229,12 @@ footer {
     border-top: 1px solid black;
 }
 
+.footer-info p {
+    margin: 0.75rem;
+}
+
 footer img {
-    width: 7rem;
+    width: 6rem;
     display: flex;
     grid-column: 1/2;
     margin-top: 2.25rem;
