--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -34,7 +34,7 @@ header h1 {
     border: none;
     position: absolute;
     top: 1.25rem;
-    right: 1.25rem;
+    right: 20px;
     font-size: 2.25rem;
     color: #234547;
 }
@@ -74,7 +74,7 @@ nav a {
 .switch {
     position: absolute;
     top: 4rem;
-    right: 1.5rem;
+    right: 25px;
     width: 36px;
     height: 22px;
 }
