--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -33,9 +33,9 @@ header h1 {
     background: none;
     border: none;
     position: absolute;
-    top: 1.25rem;
-    right: 20px;
-    font-size: 2.25rem;
+    top: 1rem;
+    right: 5%;
+    font-size: 2.5rem;
     color: #234547;
 }
 
@@ -74,7 +74,7 @@ nav a {
 .switch {
     position: absolute;
     top: 4rem;
-    right: 25px;
+    right: 6%;
     width: 36px;
     height: 22px;
 }
