Started adding dark mode

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -253,3 +253,9 @@ footer img {
 .footer-break {
     display: none;
 }
+
+.dark-mode {
+    background-color: #000;
+    color: #fff;
+    border-color: #eee;
+}
