--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -39,6 +39,24 @@
         background: none;
     }
 
+    .switch {
+        top: 1.5rem;
+        right: 2%;
+        width: 46px;
+        height: 28px;
+    }
+
+    .slider:before {
+        height: 22px;
+        width: 22px;
+    }
+
+    input:checked+.slider:before {
+        -webkit-transform: translateX(18px);
+        -ms-transform: translateX(18px);
+        transform: translateX(18px);
+    }
+
     .hero-section {
         display: flex;
         justify-content: center;
@@ -240,5 +258,11 @@
         grid-column: 1/2;
         grid-row: 1/3;
         margin-left: 3rem;
+    }
+
+    .dark-mode {
+        background-color: #000;
+        color: #fff;
+        border-color: #eee;
     }
 }
