--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,8 +1,8 @@
 @media screen and (min-width: 650px) and (max-width: 1079px) {
     header {
         display: grid;
-        grid-template-columns: repeat(6, 1fr);
         grid-template-rows: auto auto;
+        grid-template-columns: 1fr;
         position: relative;
         align-items: center;
     }
@@ -20,13 +20,10 @@
         grid-column: 1/2;
         justify-self: center;
         z-index: 1;
-        margin: auto;
     }
 
     header h1 {
-        width: 100%;
         font-size: 2rem;
-        grid-column: 2/7;
         z-index: 1;
     }
 
@@ -34,13 +31,32 @@
         display: flex;
         flex-direction: row;
         grid-row: 2;
-        grid-column: 1/7;
+        grid-column: 1/2;
+        width: 100%;
         z-index: 1;
         position: relative;
     }
 
     nav a {
         display: block;
+    }
+
+    .switch {
+        top: 2rem;
+        right: 4%;
+        width: 42px;
+        height: 26px;
+    }
+
+    .slider:before {
+        height: 20px;
+        width: 20px;
+    }
+
+    input:checked+.slider:before {
+        -webkit-transform: translateX(15px);
+        -ms-transform: translateX(15px);
+        transform: translateX(15px);
     }
 
     .hero-section {
