--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -13,14 +13,13 @@
     }
 
     header h1 {
-        font-size: 1.5rem;
+        font-size: 2rem;
         position: static;
         transform: none;
-        width: 100%;
     }
 
     .small-header h1 {
-        width: 60%;
+        width: 50%;
         margin-left: 4rem;
         justify-content: left;
     }
@@ -30,8 +29,8 @@
         flex-direction: row;
         justify-content: center;
         font-size: 1.5rem;
-        width: 70%;
-        margin-left: 2%;
+        width: 90%;
+        margin-right: 9rem;
     }
 
     nav a {
