--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -25,6 +25,7 @@
     header h1 {
         font-size: 2rem;
         z-index: 1;
+        width: 50rem;
     }
 
     nav {
@@ -80,8 +81,6 @@
 
     main {
         padding-bottom: 2rem;
-
-
     }
 
     .section1,
