--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit&family=Karla&display=swap');
 
 header {
-    background-color: #4f9b9e;
+    background-color: #38527E;
+    /* #451417*/
+    /*#495176*/
     font-family: 'Kanit', sans-serif;
-    border: 2px solid black;
+    border: 1px solid black;
     align-items: center;
     justify-content: space-between;
+    box-sizing: border-box;
 }
 
 header img {
@@ -17,7 +20,8 @@ header h1 {
     width: 10rem;
     text-align: center;
     font-size: 140%;
-    color: #234547;
+    /* color: #F8A18B; */
+    color: #D1EAF9;
     margin: 0;
     padding: 0;
     position: absolute;
@@ -37,7 +41,7 @@ header h1 {
     top: 1rem;
     right: 5%;
     font-size: 2.5rem;
-    color: #234547;
+    color: #22314c;
 }
 
 #menu::before {
@@ -64,8 +68,8 @@ nav {
 
 nav a {
     display: none;
-    background-color: #234547;
-    color: white;
+    background-color: #22314c;
+    color: #D1EAF9;
     padding: 0.5rem;
     text-align: center;
     text-decoration: none;
@@ -111,11 +115,11 @@ nav a {
 }
 
 input:checked+.slider {
-    background-color: #234547;
+    background-color: #22314c;
 }
 
 input:focus+.slider {
-    box-shadow: 0 0 1px #234547;
+    box-shadow: 0 0 1px #22314c;
 }
 
 input:checked+.slider:before {
@@ -133,12 +137,12 @@ input:checked+.slider:before {
 }
 
 nav a:hover {
-    background-color: #366666;
+    background-color: #22314c;
 }
 
 main {
     font-family: 'Karla', sans-serif;
-    color: #234547;
+    color: #22314c;
     padding-bottom: 1.5rem;
 }
 
@@ -148,7 +152,7 @@ main {
 
 #hero {
     width: 100%;
-    aspect-ratio: 30 / 13;
+    height: auto;
     display: block;
     position: relative;
 }
@@ -166,6 +170,7 @@ main {
     font-weight: bold;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
     cursor: pointer;
+    color: #22314c;
 }
 
 #action:visited {
@@ -216,6 +221,10 @@ section.section3 {
     margin: 1rem auto 0 auto;
 }
 
+.section-link:visited {
+    color: #22314c;
+}
+
 section h2 {
     font-size: 1.5rem;
     margin-bottom: 1rem;
@@ -229,7 +238,7 @@ section p {
 }
 
 footer {
-    background-color: #4f9b9e;
+    background-color: #38527E;
     padding-top: 1rem;
     text-align: center;
     font-family: 'Karla', sans-serif;
@@ -237,11 +246,13 @@ footer {
     display: grid;
     grid-template-columns: 1.25fr 2fr;
     grid-gap: 1rem;
+    color: #D1EAF9;
+    border: 1px solid black;
 }
 
 .footer-info {
     grid-column: 1/3;
-    border-top: 1px solid black;
+    border-top: 1px solid #D1EAF9;
 }
 
 .footer-info p {
@@ -271,10 +282,13 @@ footer img {
 
 .dark-mode {
     background-color: #000;
-    color: black;
     border-color: #eee;
 }
 
+main.dark-mode {
+    background-color: #22314c;
+}
+
 .dark-mode .section2 h2 {
-    color: white;
+    color: #D1EAF9;
 }
