--- a/styles/larger.css
+++ b/styles/larger.css
@@ -36,6 +36,15 @@
         display: block;
     }
 
+    .herolabel {
+        bottom: 30px;
+        left: 30px;
+    }
+
+    .herolabel p {
+        font-size: 1.5rem;
+    }
+
     h2 {
         grid-column: 1/3;
         margin-top: 3rem;
