--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -206,7 +206,15 @@
     }
 
     section.section3 {
+        margin-top: 2rem;
         margin-bottom: 3rem;
+        padding-top: 0rem;
+        padding-bottom: 0rem;
+
+    }
+
+    .section3 p {
+        margin-top: 0.25rem;
     }
 
     .section-link {
