--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -68,7 +68,7 @@
         transform: translate(80%, 210%);
     }
 
-    main {
+    .home {
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
@@ -268,5 +268,46 @@
         grid-column: 1/2;
         grid-row: 1/3;
         margin-left: 3rem;
+    }
+
+    #discover {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 2rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    #lastVisit {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        text-align: center;
+    }
+
+    .local-photos {
+        grid-column: 2 / 3;
+        width: 90%;
+        height: auto;
+    }
+
+    .demographics {
+        grid-column: 1/2;
+        grid-row: 1/3;
+        margin-left: 3rem;
+        margin-right: 3rem;
+        text-align: center;
+    }
+
+    .local-photos img:hover {
+        opacity: .5;
+    }
+
+    .local-photos p {
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    .city-council {
+        grid-column: 1/2;
     }
 }
