--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -105,4 +105,48 @@
     section.section3 {
         margin-bottom: 1rem;
     }
+
+    #discover {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 2rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    #lastVisit {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        text-align: center;
+    }
+
+    .demographics {
+        grid-column: 1/2;
+        grid-row: 1/3;
+        text-align: center;
+        margin-left: 4rem;
+        margin-right: auto;
+    }
+
+    .local-photos {
+        grid-column: 2/3;
+        width: 90%;
+        margin-left: 5%;
+        height: auto;
+        justify-content: center;
+    }
+
+    .local-photos img:hover {
+        opacity: .5;
+    }
+
+    .local-photos p {
+        grid-column: 2/3;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    .city-council {
+        grid-column: 1/2;
+    }
 }
