--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -318,9 +318,11 @@ main.dark-mode {
 }
 
 .local-photos {
-    width: 85%;
+    width: 86%;
     height: auto;
     margin-top: 1.5rem;
+    margin-left: 7%;
+    margin-right: auto;
 }
 
 .local-photos img {
@@ -339,6 +341,8 @@ main.dark-mode {
     width: 70%;
     padding: 4%;
     text-align: center;
+    margin-left: 10%;
+    margin-right: auto;
 }
 
 .demographics h2 {
@@ -352,5 +356,9 @@ main.dark-mode {
 }
 
 .city-council {
+    text-align: center;
+}
+
+#lastVisit {
     text-align: center;
 }
