--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -273,14 +273,24 @@
     #discover {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        row-gap: 2rem;
+        gap: 2rem;
         padding-top: 2rem;
         padding-bottom: 2rem;
+        align-items: start;
+    }
+
+    .left-content {
+        display: block;
+        display: flex;
+        flex-direction: column;
+        order: -1;
+        width: 90%;
+        margin-left: 5%;
+        margin-right: auto;
     }
 
     #lastVisit {
         grid-column: 1/2;
-        grid-row: 1/2;
         text-align: center;
     }
 
@@ -293,9 +303,13 @@
     .demographics {
         grid-column: 1/2;
         grid-row: 1/3;
-        margin-left: 3rem;
-        margin-right: 3rem;
+        margin-left: 10%;
+        margin-right: auto;
         text-align: center;
+    }
+
+    .demographics p {
+        padding: 0.25rem;
     }
 
     .local-photos img:hover {
@@ -309,5 +323,9 @@
 
     .city-council {
         grid-column: 1/2;
+    }
+
+    .city-council p {
+        padding: 0;
     }
 }
