--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -329,4 +329,30 @@
     .city-council p {
         padding: 0;
     }
+
+    .join {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
+
+    form {
+        grid-column: 1/2;
+        margin: 1rem;
+    }
+
+    form input {
+        margin-bottom: 1.5rem;
+    }
+
+    #join-form {
+        padding: 1.5rem;
+        margin: 2rem auto;
+    }
+
+    #contact-info {
+        padding: 1.5rem;
+        background: #cfcfcf;
+        width: 80%;
+    }
+
 }
