--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -171,18 +171,19 @@
         grid-column: 1/2;
     }
 
-    form input {
-        margin: 1rem;
-    }
-
     .join {
-        padding: 4rem;
+        padding: 2rem;
     }
 
     #join-form {
         padding: 0;
-        margin: 0;
-        width: 80%;
+        margin: auto;
+        width: 90%;
+    }
+
+    #contact-info,
+    #business-info {
+        padding: 0;
     }
 
     #membership-benefits th {
@@ -195,7 +196,43 @@
     }
 
     #membership-benefits {
+        margin-left: auto;
+        width: 95%;
+        font-size: 1rem;
         height: 92.5%;
-        margin: 2re
+    }
+
+    form input,
+    form textarea {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #membership-benefits th,
+    #membership-benefits tr {
+        padding: 0.5rem;
+    }
+
+    label {
+        display: flex;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    select#benefit-level,
+    label #benefit-level {
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #business-info label[for="benefit-level"] {
+        margin-left: 0;
+    }
+
+    legend {
+        margin-bottom: 1rem;
     }
 }
