--- a/lesson09/styles/prophets.css
+++ b/lesson09/styles/prophets.css
@@ -31,7 +31,7 @@ section {
 
 img {
     max-width: 100%;
-    height: auto;
+    height: 325px;
     box-shadow: 0 0 30px #777;
     margin-top: 0.75rem;
 }
